Closed Bug 1696568 Opened 4 years ago Closed 4 years ago

Ensure skeleton UI window is consumed if we error out after creating it

Categories

(Firefox :: General, defect, P3)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: alexical, Assigned: alexical)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

If we error out in, say, DrawSkeletonUI, the window we created will be orphaned
and left to sit there indefinitely. This patch fixes that by separating the
error from the consume result.

Pushed by dothayer@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2fd4bc76bfef Ensure skeleton UI window is always consumed if created r=emalysz
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: